Fixed lamp icon vertical alignment

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -105,6 +105,7 @@ body {
         cursor: pointer;
         display: flex;
         justify-content: center;
+        align-items: center;
         @size: 50px;
         width: @size;
         height: @size;
